--- a/public/css/web/style.css
+++ b/public/css/web/style.css
@@ -1258,6 +1258,43 @@ form label {
   right: 0;
 }
 
+.button3 {
+  display: inline-block;
+  border-radius: 20px;
+  background-color: #8bde2f;
+  border: none;
+  color:  #ffffff;
+  text-align: center;
+  font-size: 14px;
+  padding: 8px;
+  width: 90px;
+  transition: all 0.3s;
+  cursor: pointer;
+  margin: 1px;
+  vertical-align:middle: 30px;
+}
+.button3 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.3s;
+}
+.button3 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -12px;
+  transition: 0.3s;
+}
+.button3:hover span {
+  padding-right: 15px;
+}
+.button3:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
 .btn-warning {
   background: #f0ad4e;
   color: #fff;
